--- a/searchview_byID.ipynb
+++ b/searchview_byID.ipynb
@@ -32,7 +32,9 @@
     "    headlines = pickle.load(f)\n",
     "\n",
     "testVecIndex = random.randint(0, 9999)\n",
-    "print(f'使用第{testVecIndex}条新闻进行测试')"
+    "print(f'使用第{testVecIndex}条新闻进行测试')\n",
+    "\n",
+    "# No.6443 日经225指数跌幅扩大至1.1%"
    ]
   },
   {
