bert -> wwm(bert)

--- a/searchview_byID.ipynb
+++ b/searchview_byID.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Search with BERT"
+    "# Search with  wwm(bert)"
    ]
   },
   {
